[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockdor-shared"
version = "0.1.6"
authors = [
  { name="Jan-Michael Laser", email="jmlaser@web.de" },
]
description = "Shared models for consistent usage over various microservices."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiormq==6.7.7",
    "azure-servicebus==7.11.1",
    "azure-storage-queue==12.6.0",
    "pydantic==1.10.12"
]

[project.urls]
"Homepage" = "https://github.com/laserjm/stockdor-shared"
"Bug Tracker" = "https://github.com/laserjm/stockdor-shared/issues"